--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -56,6 +56,10 @@ android {
 //        noCompress 'tflite'
 //        noCompress 'lite'
 //    }
+    aaptOptions {
+        noCompress 'tflite'
+        noCompress 'lite'
+    }
 
 }
 
